# currency_browser_NBP

./: .gitignore  README.MD
backend/: .flake8  conftest.py  pyproject.toml
backend/config/: settings.py  urls.py
backend/currency/: forms.py  models.py  serializers.py  views.py
backend/currency/migrations/: 0001_initial.py  0002_load_table_a_currencies_names.py  0003_alter_currencyvalue_unique_together.py
backend/currency/templates/currency/: currency_view.html
backend/currency/templatetags/: escape_js_code.py
backend/currency/tests/: test_models.py
config/: settings.py
