[tool.poetry]
name = "currency-browser"
version = "0.1.0"
description = ""
authors = ["SlawCzech <slaw.czech@gmail.com>"]
license = "Beerware"
readme = "README.md"
packages = [{include = "currency_browser"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
